--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id="root">
+        <h1>{{mainMessage}}</h1>
+    </div>
 
-    <!--vue js-->
+ <!--vue js-->
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
  <!--il mio js-->
 <script src="script/script.js"></script>
