--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="root">
         <h1>{{mainMessage}}</h1>
+        <img v-bind:src="picture" alt="">
     </div>
 
  <!--vue js-->
