--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="root">
         <h1>{{mainMessage}}</h1>
-        <img v-bind:src="picture" alt="">
+        <img :src="picture" alt="">
     </div>
 
  <!--vue js-->
